--- a/json/CMakeLists.txt
+++ b/json/CMakeLists.txt
@@ -10,5 +10,5 @@ add_library(json STATIC ${PACKAGE_FILE})
 set_property(TARGET json PROPERTY POSITION_INDEPENDENT_CODE ON)
 set_property(TARGET json PROPERTY LINKER_LANGUAGE CXX)
 target_compile_options(json PUBLIC -Wall -Wno-unused-result -Wno-missing-braces -pedantic)
-add_custom_command(OUTPUT ${PACKAGE_FILE} COMMAND emojicodec -p json -o ${PACKAGE_FILE} -i interface.emojii --color
+add_custom_command(OUTPUT ${PACKAGE_FILE} COMMAND emojicodec -p json -o ${PACKAGE_FILE} --color
 -S ${CMAKE_BINARY_DIR} -c ${MAIN_FILE} -O DEPENDS emojicodec s ${EMOJIC_DEPEND})
